[gd_scene format=3 uid="uid://cch1wgurfp11t"]

[ext_resource type="Theme" uid="uid://ccbn336iigwja" path="res://barkley2/themes/utility_station.tres" id="1_7b7ku"]
[ext_resource type="Script" uid="uid://s4alhc01g8am" path="res://barkley2/scenes/_utilityStation/candy_panel.gd" id="2_ertq7"]
[ext_resource type="PackedScene" uid="uid://ct6q20f2hyc1i" path="res://barkley2/scenes/_utilityStation/item_candy_conteiner.tscn" id="3_xn778"]
[ext_resource type="FontFile" uid="uid://c5asr1c5g1w6h" path="res://barkley2/resources/fonts/fn_small.tres" id="4_sw80p"]
[ext_resource type="Texture2D" uid="uid://cvyp0k17ke0yg" path="res://barkley2/assets/b2_original/images/merged/sJerkin.png" id="5_jn2rw"]
[ext_resource type="Texture2D" uid="uid://ckdra5vpxt43g" path="res://barkley2/assets/b2_original/images/merged/sCandy.png" id="6_y2pf8"]
[ext_resource type="FontFile" uid="uid://bmt3s8i84e3xl" path="res://barkley2/resources/fonts/fn1.tres" id="7_3w22n"]
[ext_resource type="Texture2D" uid="uid://iw7nigjpkcvt" path="res://barkley2/assets/b2_original/images/merged/sMenuUtilitySmelt.png" id="8_q1g2y"]
[ext_resource type="Texture2D" uid="uid://clxa0bsdrci0" path="res://barkley2/assets/b2_original/images/merged/sMenuUtilitySmeltText.png" id="9_2lo2q"]
[ext_resource type="FontFile" uid="uid://0wckh5gc5ai6" path="res://barkley2/resources/fonts/smelt.tres" id="10_tyk84"]

[sub_resource type="LabelSettings" id="LabelSettings_bueka"]
line_spacing = 0.0
font = ExtResource("4_sw80p")

[sub_resource type="AtlasTexture" id="AtlasTexture_xk021"]
atlas = ExtResource("5_jn2rw")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8x52w"]
atlas = ExtResource("6_y2pf8")
region = Rect2(0, 0, 16, 16)

[sub_resource type="LabelSettings" id="LabelSettings_en4f6"]
font = ExtResource("7_3w22n")

[sub_resource type="AtlasTexture" id="AtlasTexture_6w61b"]
atlas = ExtResource("8_q1g2y")
region = Rect2(0, 0, 176, 35)

[sub_resource type="LabelSettings" id="LabelSettings_8we6v"]
font = ExtResource("10_tyk84")

[sub_resource type="LabelSettings" id="LabelSettings_t58kc"]
font = ExtResource("4_sw80p")

[node name="candy_panel" type="Control" unique_id=1432501346 node_paths=PackedStringArray("make_btn")]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 11.0
offset_top = 12.0
offset_right = 300.0
offset_bottom = 228.0
theme = ExtResource("1_7b7ku")
script = ExtResource("2_ertq7")
make_btn = NodePath("")
metadata/_custom_type_script = "uid://eir54p1frfp7"

[node name="pockets" type="GridContainer" parent="." unique_id=2018544751]
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 101.0
offset_bottom = 148.0
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 4

[node name="item_cont" parent="pockets" unique_id=590226868 instance=ExtResource("3_xn778")]
layout_mode = 2

[node name="item_cont2" parent="pockets" unique_id=1097426431 instance=ExtResource("3_xn778")]
layout_mode = 2

[node name="item_cont3" parent="pockets" unique_id=514939048 instance=ExtResource("3_xn778")]
layout_mode = 2

[node name="item_cont4" parent="pockets" unique_id=2005872391 instance=ExtResource("3_xn778")]
layout_mode = 2

[node name="item_cont5" parent="pockets" unique_id=1687754105 instance=ExtResource("3_xn778")]
layout_mode = 2

[node name="item_cont6" parent="pockets" unique_id=439950295 instance=ExtResource("3_xn778")]
layout_mode = 2

[node name="item_cont7" parent="pockets" unique_id=1072323400 instance=ExtResource("3_xn778")]
layout_mode = 2

[node name="item_cont8" parent="pockets" unique_id=1941006725 instance=ExtResource("3_xn778")]
layout_mode = 2

[node name="item_cont9" parent="pockets" unique_id=930300357 instance=ExtResource("3_xn778")]
layout_mode = 2

[node name="item_cont10" parent="pockets" unique_id=274180528 instance=ExtResource("3_xn778")]
layout_mode = 2

[node name="item_cont11" parent="pockets" unique_id=415764390 instance=ExtResource("3_xn778")]
layout_mode = 2

[node name="item_cont12" parent="pockets" unique_id=729871015 instance=ExtResource("3_xn778")]
layout_mode = 2

[node name="item_cont13" parent="pockets" unique_id=1324862690 instance=ExtResource("3_xn778")]
layout_mode = 2

[node name="item_cont14" parent="pockets" unique_id=1724160347 instance=ExtResource("3_xn778")]
layout_mode = 2

[node name="item_cont15" parent="pockets" unique_id=1470775567 instance=ExtResource("3_xn778")]
layout_mode = 2

[node name="item_cont16" parent="pockets" unique_id=1104440261 instance=ExtResource("3_xn778")]
layout_mode = 2

[node name="item_cont17" parent="pockets" unique_id=1650384564 instance=ExtResource("3_xn778")]
layout_mode = 2

[node name="item_cont18" parent="pockets" unique_id=2100979015 instance=ExtResource("3_xn778")]
layout_mode = 2

[node name="item_cont19" parent="pockets" unique_id=1813606763 instance=ExtResource("3_xn778")]
layout_mode = 2

[node name="item_cont20" parent="pockets" unique_id=1292954776 instance=ExtResource("3_xn778")]
layout_mode = 2

[node name="item_cont21" parent="pockets" unique_id=496014011 instance=ExtResource("3_xn778")]
layout_mode = 2

[node name="item_cont22" parent="pockets" unique_id=1072112862 instance=ExtResource("3_xn778")]
layout_mode = 2

[node name="item_cont23" parent="pockets" unique_id=1643221265 instance=ExtResource("3_xn778")]
layout_mode = 2

[node name="item_cont24" parent="pockets" unique_id=1196544917 instance=ExtResource("3_xn778")]
layout_mode = 2

[node name="schemes" type="GridContainer" parent="." unique_id=106686041]
layout_mode = 0
offset_left = 117.0
offset_top = 4.0
offset_right = 285.0
offset_bottom = 76.0
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 7

[node name="item_cont" parent="schemes" unique_id=1103687185 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont2" parent="schemes" unique_id=244141865 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont3" parent="schemes" unique_id=322474445 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont4" parent="schemes" unique_id=443762951 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont5" parent="schemes" unique_id=1117050580 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont6" parent="schemes" unique_id=2066073205 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont7" parent="schemes" unique_id=378751080 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont8" parent="schemes" unique_id=20554095 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont9" parent="schemes" unique_id=20302256 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont10" parent="schemes" unique_id=1541358408 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont11" parent="schemes" unique_id=1525722542 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont12" parent="schemes" unique_id=1314835744 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont13" parent="schemes" unique_id=1822321249 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont14" parent="schemes" unique_id=1325076702 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont15" parent="schemes" unique_id=438171582 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont16" parent="schemes" unique_id=1046731064 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont17" parent="schemes" unique_id=833479382 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont18" parent="schemes" unique_id=2098893222 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont19" parent="schemes" unique_id=1093023262 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont20" parent="schemes" unique_id=1328092105 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont21" parent="schemes" unique_id=1973320616 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont22" parent="schemes" unique_id=525908960 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont23" parent="schemes" unique_id=668978430 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont24" parent="schemes" unique_id=1341804084 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont25" parent="schemes" unique_id=409367223 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont26" parent="schemes" unique_id=1158210792 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont27" parent="schemes" unique_id=543513236 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="item_cont28" parent="schemes" unique_id=140176418 node_paths=PackedStringArray("candy_panel") instance=ExtResource("3_xn778")]
layout_mode = 2
candy_panel = NodePath("../..")

[node name="pocket_title" type="Panel" parent="." unique_id=958692901]
layout_mode = 0
offset_left = 5.0
offset_top = 148.0
offset_right = 45.0
offset_bottom = 156.0

[node name="pocket_title" type="Label" parent="pocket_title" unique_id=663459761]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -4.0
offset_right = 20.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
text = "POCKETS"
label_settings = SubResource("LabelSettings_bueka")
horizontal_alignment = 1
vertical_alignment = 1

[node name="scheme_title" type="Panel" parent="." unique_id=142597779]
layout_mode = 0
offset_left = 245.0
offset_top = 100.0
offset_right = 285.0
offset_bottom = 108.0

[node name="scheme_title" type="Label" parent="scheme_title" unique_id=521196693]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -4.0
offset_right = 20.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
text = "SCHEME"
label_settings = SubResource("LabelSettings_bueka")
horizontal_alignment = 1
vertical_alignment = 1

[node name="jerkin" type="Panel" parent="." unique_id=437017552]
layout_mode = 0
offset_left = 5.0
offset_top = 164.0
offset_right = 85.0
offset_bottom = 212.0

[node name="jerkin_name" type="Label" parent="jerkin" unique_id=1160042139]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 3.0
offset_top = 2.0
offset_right = -3.0
offset_bottom = 19.0
grow_horizontal = 2
text = "Undefined Jerkin"
label_settings = SubResource("LabelSettings_bueka")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="jerkin_texture" type="TextureRect" parent="jerkin" unique_id=807349022]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -9.0
offset_right = 12.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_xk021")

[node name="jerking_pocket" type="Label" parent="jerkin" unique_id=981916388]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = 14.0
offset_right = 25.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
text = "POCKETS: 99"
label_settings = SubResource("LabelSettings_bueka")
horizontal_alignment = 1
vertical_alignment = 1

[node name="curr_scheme" type="Control" parent="." unique_id=2135777618]
anchors_preset = 0
offset_left = 117.0
offset_top = 116.0
offset_right = 285.0
offset_bottom = 156.0

[node name="candy_image" type="Panel" parent="curr_scheme" unique_id=519238724]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="item_icon" type="TextureRect" parent="curr_scheme/candy_image" unique_id=3378081]
custom_minimum_size = Vector2(36, 36)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -18.0
offset_right = 18.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_8x52w")

[node name="candy_description" type="Panel" parent="curr_scheme" unique_id=1109317135]
layout_mode = 0
offset_left = 40.0
offset_right = 168.0
offset_bottom = 40.0

[node name="candy_name" type="Label" parent="curr_scheme/candy_description" unique_id=1939824240]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 2.0
offset_right = -2.0
offset_bottom = 20.0
grow_horizontal = 2
text = "Placeholder"
label_settings = SubResource("LabelSettings_en4f6")

[node name="candy_effect" type="Label" parent="curr_scheme/candy_description" unique_id=639088045]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -21.0
offset_right = -2.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
text = "+69 HP"

[node name="info_title" type="Panel" parent="curr_scheme" unique_id=1229084757]
layout_mode = 0
offset_top = -8.0
offset_right = 40.0

[node name="info_title" type="Label" parent="curr_scheme/info_title" unique_id=1561080052]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -4.0
offset_right = 20.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
text = "INFO"
label_settings = SubResource("LabelSettings_bueka")
horizontal_alignment = 1
vertical_alignment = 1

[node name="smelt" type="Control" parent="." unique_id=668536461]
anchors_preset = 0
offset_left = 93.0
offset_top = 172.0
offset_right = 133.0
offset_bottom = 212.0

[node name="smelt_panel" type="Panel" parent="smelt" unique_id=994944297]
layout_mode = 0
offset_right = 192.0
offset_bottom = 40.0

[node name="smelt_gauge" type="TextureRect" parent="smelt/smelt_panel" unique_id=848035535]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -18.0
offset_right = 88.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_6w61b")

[node name="smelt_title" type="TextureRect" parent="smelt/smelt_panel" unique_id=1698931706]
layout_mode = 0
offset_left = 87.0
offset_top = 22.0
offset_right = 131.0
offset_bottom = 37.0
texture = ExtResource("9_2lo2q")

[node name="smelt_value" type="Label" parent="smelt/smelt_panel" unique_id=1959631912]
layout_mode = 0
offset_left = 18.0
offset_top = 22.0
offset_right = 85.0
offset_bottom = 38.0
text = "420"
label_settings = SubResource("LabelSettings_8we6v")
horizontal_alignment = 2

[node name="smelt_cost_value" type="Label" parent="smelt/smelt_panel" unique_id=975931911]
layout_mode = 0
offset_left = 117.0
offset_top = 22.0
offset_right = 184.0
offset_bottom = 38.0
text = "- 99"
label_settings = SubResource("LabelSettings_8we6v")
horizontal_alignment = 2

[node name="smelt_title" type="Panel" parent="smelt" unique_id=551541696]
layout_mode = 0
offset_left = 152.0
offset_top = -8.0
offset_right = 192.0

[node name="smelt_title" type="Label" parent="smelt/smelt_title" unique_id=1458787297]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "SMELT"
label_settings = SubResource("LabelSettings_t58kc")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
